<resources>
    <string name="app_name">MobileVideoClub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">VideoClub</string>
    <string name="formularioTitle">Formulario</string>
    <string name="formTitulo">Título</string>
    <string name="descripcionForm">Descripcion:</string>
    <string name="url_de_la_portada">Url de la portada</string>
    <string name="guardar">Guardar</string>
    <string name="todo">TODO</string>
</resources>